:heavy_plus_sign: webpack + scssを追加

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         {
             "type": "pwa-chrome",
             "request": "launch",
-            "preLaunchTask": "npm: start",
+            "preLaunchTask": "yarn: start",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}",
