--- a/package.json
+++ b/package.json
@@ -2,32 +2,29 @@
   "name": "shapes-generator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ChenCMD.github.io/shapes-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.13",
-    "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.5",
-    "@types/rfdc": "^1.2.0",
     "bootstrap": "^5.0.1",
     "konva": "^8.0.2",
+    "node-sass": "4.14.1",
+    "package.json": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-4",
     "react-measure": "^2.5.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "rfdc": "^1.3.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "eslintConfig": {
     "extends": [
@@ -48,11 +45,28 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
     "@types/react-measure": "^2.0.6",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/rfdc": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "autoprefixer": "^9.7.4",
+    "css-loader": "^3.2.0",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript-plugin-css-modules": "^3.4.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
