--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,17 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ]
   },
   "include": [
     "src"
+, "styles.d.ts"  ],
+  "exclude": [
+    "node_modules"
   ]
 }
