--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -65,8 +65,8 @@
     "sass-loader": "^8.0.0",
     "ts-loader": "^6.2.1",
     "typescript-plugin-css-modules": "^3.4.0",
-    "webpack": "^4.41.2",
+    "webpack": "4.44.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "3.11.1"
   }
 }
