:recycle: 図形データをクラスで持つように

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
         "name": "typescript-plugin-css-modules"
       }
     ],
-    "noEmit": true
+    "noEmit": true,
+    "downlevelIteration": true
   },
   "include": [
     "src"
