:wrench: デバッグプロセスをreactからwebpack-dev-serverに移行

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "react-scripts start"
+    "start": "webpack-dev-server"
   },
   "eslintConfig": {
     "extends": [
