--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "rfdc": "^1.3.0",
     "typescript": "^4.3.2",
+    "uuidjs": "^4.2.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
