--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
     "konva": "^8.0.2",
-    "node-sass": "4.14.1",
     "package.json": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
@@ -63,6 +62,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
+    "sass": "^1.35.1",
     "sass-loader": "^8.0.0",
     "ts-loader": "^6.2.1",
     "typescript-plugin-css-modules": "^3.4.0",
