--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react-modal": "^3.12.0",
     "bootstrap": "^5.0.1",
     "konva": "^8.0.2",
     "package.json": "^2.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-4",
     "react-measure": "^2.5.2",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "rfdc": "^1.3.0",
