--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "build": "webpack --move production",
     "start": "webpack-dev-server --mode development",
+    "start-profiling": "webpack-dev-server --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
