--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "build": "rm -r dist&&webpack --move production",
+    "build": "rm -r dist&&webpack --mode production",
     "start": "webpack-dev-server --mode development",
     "start-profiling": "webpack-dev-server --mode production",
     "predeploy": "npm run build",
