--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://ChenCMD.github.io/shapes-generator",
   "dependencies": {
     "bootstrap": "^5.0.1",
+    "fast-deep-equal": "^3.1.3",
     "konva": "^8.0.2",
     "package.json": "^2.0.1",
     "react": "^17.0.2",
