--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.0.1",
     "fast-deep-equal": "^3.1.3",
     "konva": "^8.0.2",
+    "lz-string": "^1.4.4",
     "package.json": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
@@ -51,6 +52,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
