--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "rfdc": "^1.3.0",
     "typescript": "^4.3.2",
     "uuidjs": "^4.2.8",
