:sparkles: Anchor図形を追加
close #16

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "build": "rm -r dist;webpack --mode production",
+    "build-dev": "rm -r dist;webpack --mode development",
     "start": "webpack-dev-server --mode development",
     "start-profiling": "webpack-dev-server --mode production",
     "predeploy": "npm run build",
